--- a/package.xml
+++ b/package.xml
@@ -13,11 +13,14 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+
+  <build_depend>message_generation</build_depend>
   <build_depend>actionlib</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>robotiq_s_model_control</build_depend>
   <build_depend>roscpp</build_depend>
 
+  <run_depend>message_runtime</run_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>robotiq_s_model_control</run_depend>
